# AGV_Route_designer

./: CMakeLists.txt  README.md  Version.h  app_info.cpp  app_info.h  main.cpp  main.qml
.cmake/: version.h.in
UI/Cpp/: qt_singleton.h  ui.cpp  ui.h
UI/JS/: Draw.js
UI/Qml/: Color.qml
basis/: qt_color_set.h  qt_colors.h  qt_singleton.h  singleton.h  stdafx.h
